Create computational graph sum node

--- a/tnn.ipynb
+++ b/tnn.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from abc import ABC, abstractmethod"
+    "from abc import ABC, abstractstaticmethod\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,13 +22,34 @@
     "    Computational graph node template\n",
     "    '''\n",
     "    \n",
-    "    @abstractmethod\n",
-    "    def prop_forward(self):\n",
+    "    @abstractstaticmethod\n",
+    "    def prop_forward(x):\n",
     "        pass\n",
     "    \n",
-    "    @abstractmethod\n",
-    "    def prop_backward(self):\n",
+    "    @abstractstaticmethod\n",
+    "    def prop_backward():\n",
     "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CGSum(CGNode):\n",
+    "    \n",
+    "    '''\n",
+    "    Computational graph sum node\n",
+    "    '''\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def prop_forward(x):\n",
+    "        return np.array(x).sum()\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def prop_backward(x):\n",
+    "        return np.ones(np.array(x).size)\n"
    ]
   }
  ],
