Finish dot product and start perceptron

--- a/cg.ipynb
+++ b/cg.ipynb
@@ -4,22 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO: make instances instead of static classes so as to hold last forwarded inputs and outputs"
+    "# Computational Graphs\n",
+    "\n",
+    "In this notebook, some simple computational graph (CG) nodes are implemented. Each with a forward pass method (prop_forward) and a backward pass method (prop_backward). No assumption of being in a neural network is present, so the gradient is calculated considering all values to be instances of a variable of interest, this is, there is no concept or weights or data points. There are just inputs and outputs. The reason for this approach is that I consider it important to learn about computational graphs in order to understand neural networks better. After all, neural networks are not anything but that: ~~snowflaked~~ computational graphs\n",
+    "\n",
+    "The assumption above does not impede nor complicate, however, the construction of a neural network, because a wrapper class (*e.g.* a Perceptron class) can use these CG components and be aware of weights and data. Then, such wrapper classes can be grouped in different ways to create more complex neural structures."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from abc import ABC, abstractstaticmethod\n",
+    "from abc import ABC, abstractmethod\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,22 +34,27 @@
     "    the input vectors must have a shape of the form (n,)\n",
     "    '''\n",
     "    \n",
-    "    @abstractstaticmethod\n",
-    "    def prop_forward():\n",
+    "    def __init__(self):\n",
+    "        self.last_input = None\n",
+    "        self.last_output = None\n",
+    "    \n",
+    "    @abstractmethod\n",
+    "    def prop_forward(self):\n",
     "        \n",
     "        '''\n",
     "        Take inputs and evaluate the\n",
     "        node's corresponding operation\n",
     "        '''\n",
-    "        \n",
+    "\n",
     "        pass\n",
     "    \n",
-    "    @abstractstaticmethod\n",
-    "    def prop_backward():\n",
+    "    @abstractmethod\n",
+    "    def prop_backward(self, grad):\n",
     "        \n",
     "        '''\n",
-    "        Take outputs and evaluate the gradient\n",
-    "        of the node's corresponding operation\n",
+    "        Evaluate the gradient of the node's\n",
+    "        corresponding operation using an \n",
+    "        incoming gradient 'grad' in backprop\n",
     "        '''\n",
     "        \n",
     "        pass"
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,18 +72,40 @@
     "    Computational graph sum node\n",
     "    '''\n",
     "    \n",
-    "    @staticmethod\n",
-    "    def prop_forward(x):\n",
-    "        return np.sum(x)\n",
+    "    def prop_forward(self, x):\n",
+    "        self.last_input = np.array(x)\n",
+    "        self.last_output = np.sum(x)\n",
+    "        return self.last_output\n",
     "    \n",
-    "    @staticmethod\n",
-    "    def prop_backward(x, grad):\n",
-    "        return grad * np.ones(np.array(x).size)\n"
+    "    def prop_backward(self, grad):\n",
+    "        return grad * np.ones(self.last_input.size)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.2, 1.2, 1.2])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = CGSum()\n",
+    "s.prop_forward([1,7,9])\n",
+    "s.prop_backward(1.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,16 +115,17 @@
     "    Computational graph multiplication node\n",
     "    '''\n",
     "    \n",
-    "    @staticmethod\n",
-    "    def prop_forward(x):\n",
-    "        return np.prod(x)\n",
+    "    def prop_forward(self, x):\n",
+    "        self.last_input = np.array(x)\n",
+    "        self.last_output = np.prod(self.last_input)\n",
+    "        return self.last_output\n",
     "    \n",
-    "    @staticmethod\n",
-    "    def prop_backward(x, grad):\n",
-    "        _x = np.array(x)\n",
-    "        \n",
+    "    def prop_backward(self, grad):        \n",
     "        # repeat x size times and arrange as rows\n",
-    "        repeated = np.ones([_x.size, _x.size])*x\n",
+    "        \n",
+    "        size = self.last_input.size\n",
+    "        \n",
+    "        repeated = np.ones((size, size))*self.last_input\n",
     "        \n",
     "        # start differentiation\n",
     "        np.fill_diagonal(repeated, 1)\n",
@@ -105,51 +137,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "48"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = CGMul()\n",
+    "a.prop_forward([1,2,3,8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([48., 24., 16.,  6.])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.prop_backward(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "class CGExp(CGNode):\n",
     "    \n",
-    "    @staticmethod\n",
-    "    def prop_forward(x):\n",
-    "        return np.exp(x)\n",
+    "    def prop_forward(self, x):\n",
+    "        self.last_input = np.array(x)\n",
+    "        self.last_output = np.exp(self.last_input)\n",
+    "        return self.last_output\n",
     "    \n",
-    "    @staticmethod\n",
-    "    def prop_backward(x, grad):\n",
-    "        return grad * np.exp(x)"
+    "    def prop_backward(self, grad):\n",
+    "        return grad * self.last_output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class CGDot(CGNode):\n",
+    "class CGDot:\n",
     "    \n",
     "    '''\n",
     "    Dot product node composed of summation and multiplication nodes for \n",
     "    transparency and accordance with the concept of a computational graph\n",
     "    '''\n",
     "    \n",
-    "    @staticmethod\n",
-    "    def prop_forward(x, y):\n",
+    "    def __init__(self):\n",
+    "        self.last_x = None\n",
+    "        self.last_y = None\n",
+    "        self.last_output = None\n",
     "        \n",
-    "        xy = CGDot.pre_dot(x, y)\n",
-    "        mul = np.apply_along_axis(CGMul.prop_forward, 0, xy)\n",
-    "        result =  CGSum.prop_forward(mul)\n",
-    "        return result\n",
+    "        # one summation\n",
+    "        self.cg_sum = None\n",
+    "        \n",
+    "        # many multiplications\n",
+    "        self.cg_muls = None\n",
     "    \n",
-    "    @staticmethod\n",
-    "    def prop_backward(x, y, grad):\n",
+    "    def prop_forward(self, x, y):\n",
     "        \n",
-    "        xy = CGDot.pre_dot()\n",
+    "        '''Compute the dot product of vectors x and y'''\n",
     "        \n",
-    "        # take the inputs of the sum phase (i.e. the output of the multiplication phase)\n",
-    "        sum_back_prop = np.apply_along_axis(lambda _xy: CGSum.prop_backward(xy, grad), 0, xy)\n",
+    "        self.last_x = np.array(x)\n",
+    "        self.last_y = np.array(y)\n",
     "        \n",
-    "        return s\n",
+    "        # if no data has been propagated yet,\n",
+    "        # instantiate as many mul nodes\n",
+    "        # as the dimension of the inputs\n",
+    "        if not self.cg_sum:\n",
+    "            self.cg_muls = [CGMul() for _ in self.last_x]\n",
+    "            self.cg_sum = CGSum()\n",
+    "        \n",
+    "        # align corresponding values to multiply\n",
+    "        xy = CGDot.pre_dot(x, y)\n",
+    "        \n",
+    "        # multiplication phase\n",
+    "        summands = [cg_mul.prop_forward(factors) for cg_mul, factors in zip(self.cg_muls, xy)]\n",
+    "        \n",
+    "        # summation\n",
+    "        self.last_output = self.cg_sum.prop_forward(summands)\n",
+    "        \n",
+    "        return self.last_output\n",
+    "    \n",
+    "    def prop_backward(self, grad, flat=False):\n",
+    "        \n",
+    "        '''\n",
+    "        Propagate the gradients backward by calling prop_backward\n",
+    "        of the sum and multiplications of which the dot product is \n",
+    "        composed of. Actual computation is delegated to smaller \n",
+    "        nodes\n",
+    "        \n",
+    "        :returns: nx2 array (n being the size of the input). Each\n",
+    "        row is the gradient of a sum of two input vector components\n",
+    "        unless flat is True, in which case the return value is just\n",
+    "        the flattened version of the nx2 array\n",
+    "        '''\n",
+    "        \n",
+    "        sum_grad = self.cg_sum.prop_backward(grad)\n",
+    "        mul_grad = np.array([\n",
+    "            cg_mul.prop_backward(sum_grad_i) for cg_mul, sum_grad_i in zip(self.cg_muls, sum_grad)\n",
+    "        ])\n",
+    "        \n",
+    "        return mul_grad.flatten() if flat else mul_grad\n",
     "    \n",
     "    \n",
     "    @staticmethod\n",
@@ -163,40 +275,57 @@
     "        x = np.reshape(x, (1, len(x)))\n",
     "        y = np.reshape(y, (1, len(y)))\n",
     "        xy = np.concatenate((x,y))\n",
-    "        return xy"
+    "        return xy.T"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### I wanted to create a generalization of a computational graph, but its implementation appears to be too complex for my desired scope"
+    "#### CGDot in action"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# class CG:\n",
-    "    \n",
-    "#     def __init__(self, gates):\n",
-    "        \n",
-    "#         # gates is a list of lists of gates\n",
-    "#         # gates in the same row receive same inputs\n",
-    "#         self.gates = gates\n",
-    "        \n",
-    "#     def prop_forward(self, x):\n",
-    "#         next_values = x\n",
-    "#         for gate_row in self.gates:\n",
-    "#             input_values = next_values\n",
-    "#             next_values = []\n",
-    "#             for gate in gate_row:\n",
-    "#                 new_value = gate.prop_forward(input_values)\n",
-    "#                 next_values.append(new_value)\n",
-    "                \n",
-    "                "
+    "dot = CGDot()\n",
+    "dot.prop_forward([1,2,3], [4,5,6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4., 1.],\n",
+       "       [5., 2.],\n",
+       "       [6., 3.]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dot.prop_backward(grad=1)"
    ]
   }
  ],
@@ -216,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
